force-app/main/default/objects/X7S_Ideas_Subscription__c/X7S_Ideas_Subscription__c.object-meta.xml
<CustomObject>
    <description>A custom object to mimic the behavior of EntitySubscription, allowing users to follow Ideas and receive e-mail notifications.</description>
    <label>7S Idea Subscription</label>
    <nameField>
        <displayFormat>IS-{0000}</displayFormat>
        <label>7S Idea Subscription Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>7S Idea Subscriptions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>