force-app/main/default/objects/X7S_Ideas_Subscription__c/fields/NetworkId__c.field-meta.xml
<CustomField>
    <fullName>NetworkId__c</fullName>
    <description>Related community</description>
    <label>NetworkId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>