force-app/main/default/objects/X7S_Ideas_Subscription__c/fields/ParentId__c.field-meta.xml
<CustomField>
    <fullName>ParentId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Ideas Subscriptions</description>
    <label>ParentId</label>
    <referenceTo>Idea</referenceTo>
    <relationshipName>X7S_Ideas_Subscriptions</relationshipName>
    <type>Lookup</type>
</CustomField>