force-app/main/default/objects/X7S_Ideas_Subscription__c/fields/SubscriberId__c.field-meta.xml
<CustomField>
    <fullName>SubscriberId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SubscriberId</label>
    <referenceTo>User</referenceTo>
    <relationshipName>X7S_Ideas_Subscriptions</relationshipName>
    <type>Lookup</type>
</CustomField>